# prac_fastapi

./: .env  index.html  main  main.py  pyproject.toml  requirements.txt  style.css
.github/workflows/: cd.yml  ci.yml
app/: app.py  auth.py  db.py  schemas.py
