[project]
name = "prac-fastapi"
version = "0.1.0"
description = "Social media backend API built with FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=3.0.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.44.0",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "asyncpg",
    "psycopg2-binary",
    "python-jose",
    "passlib[argon2]",
    "python-multipart",
    "aiofiles",
    "python-dotenv",
    "cloudinary"
]
